# smart-settings

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
.github/workflows/: lint.yml
examples/dynamic/: basic.json  basic.yaml
examples/importing/: defaults.json  defaults_w_cyclic.json  extend_params_list.json  extend_params_list_twice.json  load_nested_repeating_import.json  load_twice.json  load_twice_cyclic_should_fail.json  multi_import.json  multi_import_new_train_params.json  multi_import_train_params.json  multi_import_user.json  new_default_optimizer_params.json
smart_json/: __init__.py  param_classes.py  smart_json.py
smart_settings/: __init__.py  add_key.py  change_key.py  dynamic.py  file_editing.py  param_classes.py  port_cluster_utils_3.py  smart_settings.py  utils.py
